Adding the buttons

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,35 @@
 		<title>Calculator</title>
 	</head>
 	<body>
+		<div class="root">
+			<div class="row-cont">
+				<button>AC</button>
+				<button>0</button>
+				<button>/</button>
+				<button>*</button>
+			</div>
+			<div class="row-cont">
+				<button>7</button>
+				<button>8</button>
+				<button>9</button>
+				<button>device-width</button>
+			</div>
+			<div class="row-cont">
+				<button>4C</button>
+				<button>5</button>
+				<button>6</button>
+				<button>+</button>
+			</div>
+			<div class="row-cont">
+				<button>1</button>
+				<button>2</button>
+				<button>3</button>
+				<button>.</button>
+			</div>
+
+		</div>
+
+
 		<script src="script.js"></script>
 	</body>
 </html>
