Arranging buttons and styling them

--- a/src/index.html
+++ b/src/index.html
@@ -9,30 +9,31 @@
 	<body>
 		<div class="root">
 			<div class="row-cont">
-				<button>AC</button>
-				<button>0</button>
-				<button>/</button>
-				<button>*</button>
-			</div>
-			<div class="row-cont">
+				<button class="operator">+</button>
 				<button>7</button>
 				<button>8</button>
 				<button>9</button>
-				<button>device-width</button>
 			</div>
 			<div class="row-cont">
-				<button>4C</button>
+				<button class="operator">-</button>
+				<button>4</button>
 				<button>5</button>
 				<button>6</button>
-				<button>+</button>
+				
 			</div>
 			<div class="row-cont">
+				<button class="operator">*</button>
 				<button>1</button>
 				<button>2</button>
 				<button>3</button>
-				<button>.</button>
 			</div>
-
+			<div class="row-cont">
+				<button class="operator">/</button>
+				<button>0</button>
+				<button>.</button>
+				<button id="equal">=</button>
+			</div>
+			<button class="operator">AC</button>
 		</div>
 
 
