Adding div where the calculation & answer will be displayed and styling it.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 	</head>
 	<body>
 		<div class="root">
+			<div class="display">
+				
+			</div>
 			<div class="row-cont">
 				<button class="operator">+</button>
 				<button>7</button>
