--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,10 @@
 	</head>
 	<body>
 		<div class="root">
-			<div class="display">
-				
-			</div>
+			<div class="display"></div>
 			<div class="row-cont">
-				<button class="operator">+</button>
-				<button>7</button>
+				<button class="operator" onclick="calculation('+')">+</button>
+				<button onclick="calculation(7)">7</button>
 				<button>8</button>
 				<button>9</button>
 			</div>
@@ -34,7 +32,7 @@
 				<button class="operator">/</button>
 				<button>0</button>
 				<button>.</button>
-				<button id="equal">=</button>
+				<button id="equal" onclick="getAnswer()">=</button>
 			</div>
 			<button class="operator">AC</button>
 		</div>
