--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,29 @@
 			<div class="row-cont">
 				<button class="operator" onclick="calculation('+')">+</button>
 				<button onclick="calculation(7)">7</button>
-				<button>8</button>
-				<button>9</button>
+				<button onclick="calculation(8)">8</button>
+				<button onclick="calculation(9)">9</button>
 			</div>
 			<div class="row-cont">
 				<button class="operator">-</button>
-				<button>4</button>
-				<button>5</button>
-				<button>6</button>
+				<button onclick="calculation(4)">4</button>
+				<button onclick="calculation(5)">5</button>
+				<button onclick="calculation(6)">6</button>
 				
 			</div>
 			<div class="row-cont">
 				<button class="operator">*</button>
-				<button>1</button>
-				<button>2</button>
-				<button>3</button>
+				<button onclick="calculation(1)">1</button>
+				<button onclick="calculation(2)">2</button>
+				<button onclick="calculation(3)">3</button>
 			</div>
 			<div class="row-cont">
 				<button class="operator">/</button>
-				<button>0</button>
-				<button>.</button>
+				<button onclick="calculation(0)">0</button>
+				<button onclick="calculation('.')">.</button>
 				<button id="equal" onclick="getAnswer()">=</button>
 			</div>
-			<button class="operator">AC</button>
+			<button class="operator" onclick="reset()">AC</button>
 		</div>
 
 
