--- a/src/index.html
+++ b/src/index.html
@@ -16,20 +16,20 @@
 				<button onclick="calculation(9)">9</button>
 			</div>
 			<div class="row-cont">
-				<button class="operator">-</button>
+				<button class="operator" onclick="calculation('-')">-</button>
 				<button onclick="calculation(4)">4</button>
 				<button onclick="calculation(5)">5</button>
 				<button onclick="calculation(6)">6</button>
 				
 			</div>
 			<div class="row-cont">
-				<button class="operator">*</button>
+				<button class="operator" onclick="calculation('*')">*</button>
 				<button onclick="calculation(1)">1</button>
 				<button onclick="calculation(2)">2</button>
 				<button onclick="calculation(3)">3</button>
 			</div>
 			<div class="row-cont">
-				<button class="operator">/</button>
+				<button class="operator" onclick="calculation('/')">/</button>
 				<button onclick="calculation(0)">0</button>
 				<button onclick="calculation('.')">.</button>
 				<button id="equal" onclick="getAnswer()">=</button>
